# example/types.go
@@ -4,6 +4,7 @@ package example
 
 import (
 	"context"
+	"io"
 	"time"
 
 	"google.golang.org/protobuf/types/known/durationpb"
@@ -71,8 +72,17 @@ type SinceResponse struct {
 	Body *durationpb.Duration `use_as_body:"true" is_protobuf:"true"`
 }
 
+type StreamRequest struct {
+	Key  string        `header:"authorization"`
+	Body io.ReadCloser `use_as_body:"true"`
+}
+
+type StreamResponse struct {
+}
+
 type IEchoService interface {
 	Hello(ctx context.Context, req *HelloRequest) (*HelloResponse, error)
 	Echo(ctx context.Context, req *EchoRequest) (*EchoResponse, error)
 	Since(ctx context.Context, req *SinceRequest) (*SinceResponse, error)
+	StreamBody(ctx context.Context, req *StreamRequest) (*StreamResponse, error)
 }
